--- a/execsample/pom.xml
+++ b/execsample/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>tiles-extras</artifactId>
 			<version>3.0.8</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/servlets.com/cos -->
+		<dependency>
+			<groupId>servlets.com</groupId>
+			<artifactId>cos</artifactId>
+			<version>05Nov2002</version>
+		</dependency>
 
 		<dependency>
 			<groupId>junit</groupId>
